# fastapi-tortoise-template

./: .env.example  pyproject.toml  requirement.txt
migrations/models/: 0_20250730144608_init.py
src/: lifespan.py  main.py  settings.py
src/controllers/: home_controllers.py
src/models/: user.py
src/routes/: __init__.py  home_routes.py
src/utillities/: auth.py
