[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich[toml]>=0.9.1",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "tortoise-orm[asyncpg]>=0.25.1",
]

[tool.aerich]
tortoise_orm = "src.lifespan.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
